<resources>

    <string name="app_name">GestoConta</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="_que_deseas_hacer_">¿?</string>
    <string name="pregunta">¿Que deseas hacer?</string>
    <string name="categorias">Categorias</string>
    <string name="cuentas">Cuentas</string>
    <string name="transferencias">Transferencias</string>
    <string name="crear">Crear</string>
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="cantidad">Cantidad</string>
    <string name="sacar_dinero">Sacar dinero</string>
    <string name="ingresar_dinero">Ingresar Dinero</string>
    <string name="movimientos_entre_cuentas">Movimientos entre cuentas</string>
    <string name="lupa">lupa</string>

</resources>