<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000" >

    <TextView
        android:id="@+id/titulomain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:shadowDx="5.0"
        android:shadowDy="5.0"
        android:text="@string/bienvenido"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/¿?"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/titulomain"
        android:text="@string/pregunta"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"/>

    <Spinner
        android:id="@+id/spinnermain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/¿?"
        android:layout_marginTop="15dp" />

    <ImageView
        android:id="@+id/lupa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/¿?"
        android:layout_alignParentRight="true"
        android:layout_marginRight="31dp"
        android:contentDescription="@string/lupa"
        android:src="@drawable/ic_action_search" />

</RelativeLayout>
